# astroagent

./: .gitignore  CLAUDE.md  EVALUATION.md  README.md  pyproject.toml
backend/: check_models.py  pyproject.toml  requirements.txt
backend/app/: graph.py  main.py  state.py
backend/app/knowledge/: notes.md
backend/app/tools/: __init__.py  chart.py  geocode.py  knowledge.py  transits.py
backend/scripts/: smoke.py  test_cache.py  test_memory.py  test_router.py  test_stream.py  test_tools.py
eval/: golden_set.jsonl  judge.py  results_log.csv  runner.py  spotcheck_human.json  spotcheck_verdicts.json
frontend/: index.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BirthDetailsForm.tsx  ChatView.tsx  ConfirmCard.tsx  Message.tsx  ToolTrace.tsx
frontend/src/hooks/: useChatStream.ts
